跑通腾讯的level2接口, 但数据处理的bug还等待修复

--- a/config/symbols.yaml
+++ b/config/symbols.yaml
@@ -20,5 +20,5 @@ symbols:
     name: "宁德时代"
   - code: "601888"
     name: "中国中免"
-  - code: "600887"
-    name: "伊利股份"
+  - code: "002594"
+    name: "比亚迪"
