--- a/config/symbols.yaml
+++ b/config/symbols.yaml
@@ -22,3 +22,15 @@ symbols:
     name: "中国中免"
   - code: "002594"
     name: "比亚迪"
+  - code: "600576"
+    name: ""
+  - code: "000564"
+    name: ""
+  - code: "002879"
+    name: ""
+  - code: "301595"
+    name: ""
+  - code: "300718"
+    name: ""
+  - code: "601333"
+    name: ""
